test/compile-fail/resolution/pub/in-non-visible-ancestor-mod/top.rhdl
mod a {
    mod b {
        mod c {
            pub(in crate::a) struct d {}
        }
    }
}
